added site functionality in JS

--- a/index.html
+++ b/index.html
@@ -15,131 +15,7 @@
     <header>
       <h1>Awesome Startup Employee Directory</h1>
     </header>
-    <main class="grid-container">
-      <!--Employee 1-->
-      <div class="card">
-        <img class="avatar" src="images/random-avatar.jpg" />
-        <div class="text-container">
-          <h2>Haleigh Macchiarella</h2>
-          <p class="email">dtucker@yakitri.edu</p>
-          <p class="city">Chicago</p>
-        </div>
-      </div>
-      <!--Employee 2-->
-      <div class="card">
-        <img class="avatar" src="images/random-avatar.jpg" />
-        <div class="text-container">
-          <h2>Haleigh Macchiarella</h2>
-          <p class="email">dtucker@yakitri.edu</p>
-          <p class="city">Chicago</p>
-        </div>
-      </div>
-      <!--Employee 3-->
-      <div class="card">
-        <img class="avatar" src="images/random-avatar.jpg" />
-        <div class="text-container">
-          <h2>Inger Revis</h2>
-          <p class="email">dtucker@yakitri.edu</p>
-          <p class="city">Chicago</p>
-        </div>
-      </div>
-      <!--Employee 4-->
-      <div class="card">
-        <img class="avatar" src="images/random-avatar.jpg" />
-        <div class="text-container">
-          <h2>Haleigh Macchiarella</h2>
-          <p class="email">dtucker@yakitri.edu</p>
-          <p class="city">Chicago</p>
-        </div>
-      </div>
-      <!--Employee 5-->
-      <div class="card">
-        <img class="avatar" src="images/random-avatar.jpg" />
-        <div class="text-container">
-          <h2>Haleigh Macchiarella</h2>
-          <p class="email">dtucker@yakitri.edu</p>
-          <p class="city">Chicago</p>
-        </div>
-      </div>
-      <!--Employee 6-->
-      <div class="card">
-        <img class="avatar" src="images/random-avatar.jpg" />
-        <div class="text-container">
-          <h2>Haleigh Macchiarella</h2>
-          <p class="email">dtucker@yakitri.edu</p>
-          <p class="city">Chicago</p>
-        </div>
-      </div>
-      <!--Employee 7-->
-      <div class="card">
-        <img class="avatar" src="images/random-avatar.jpg" />
-        <div class="text-container">
-          <h2>Haleigh Macchiarella</h2>
-          <p class="email">dtucker@yakitri.edu</p>
-          <p class="city">Chicago</p>
-        </div>
-      </div>
-      <!--Employee 8-->
-      <div class="card">
-        <img class="avatar" src="images/random-avatar.jpg" />
-        <div class="text-container">
-          <h2>Haleigh Macchiarella</h2>
-          <p class="email">dtucker@yakitri.edu</p>
-          <p class="city">Chicago</p>
-        </div>
-      </div>
-      <!--Employee 9-->
-      <div class="card">
-        <img class="avatar" src="images/random-avatar.jpg" />
-        <div class="text-container">
-          <h2>Haleigh Macchiarella</h2>
-          <p class="email">dtucker@yakitri.edu</p>
-          <p class="city">Chicago</p>
-        </div>
-      </div>
-      <!--Employee 10-->
-      <div class="card">
-        <img class="avatar" src="images/random-avatar.jpg" />
-        <div class="text-container">
-          <h2>Haleigh Macchiarella</h2>
-          <p class="email">dtucker@yakitri.edu</p>
-          <p class="city">Chicago</p>
-        </div>
-      </div>
-      <!--Employee 11-->
-      <div class="card">
-        <img class="avatar" src="images/random-avatar.jpg" />
-        <div class="text-container">
-          <h2>Haleigh Macchiarella</h2>
-          <p class="email">dtucker@yakitri.edu</p>
-          <p class="city">Chicago</p>
-        </div>
-      </div>
-      <!--Employee 12-->
-      <div class="card">
-        <img class="avatar" src="images/random-avatar.jpg" />
-        <div class="text-container">
-          <h2>Haleigh Macchiarella</h2>
-          <p class="email">dtucker@yakitri.edu</p>
-          <p class="city">Chicago</p>
-        </div>
-      </div>
-      <div class="overlay" id="overlay">
-        <div class="modal">
-          <button class="modal-close-button" id="modal-close-button">×</button>
-          <div class="content-modal">
-            <img class="avatar" src="images/random-avatar.jpg" />
-            <h2>Haleigh Macchiarella</h2>
-            <p class="email">dtucker@yakitri.edu</p>
-            <p class="city">Chicago</p>
-            <hr />
-            <p>(593) 364-3429</p>
-            <p class="address">851 Scoville Plymouth, WV 84814</p>
-            <p>Birthday: 01/04/85</p>
-          </div>
-        </div>
-      </div>
-    </main>
+    <main class="grid-container" id="grid-container"></main>
     <script src="js/script.js"></script>
   </body>
 </html>
