Added seach functionality

--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
   <body>
     <header>
       <h1>Awesome Startup Employee Directory</h1>
+      <input
+        type="text"
+        class="input-search"
+        id="input"
+        placeholder="Search Employees"
+      />
     </header>
     <main class="grid-container" id="grid-container"></main>
-    <script src="js/script.js"></script>
+    <script src="js/fetch.js"></script>
+    <script src="js/search.js"></script>
   </body>
 </html>
