--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <main class="grid-container" id="grid-container"></main>
     <script src="js/fetch.js"></script>
     <script src="js/search.js"></script>
+    <script src="js/modal.js"></script>
   </body>
 </html>
